--- a/javajam/javajam.css
+++ b/javajam/javajam.css
@@ -1,26 +1,67 @@
 @import url('https://fonts.googleapis.com/css2?family=El+Messiri:wght@500&display=swap');
 
 body    {background-color: #FCEBB6;
+        background-image: url(images/fadedroad50.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+	background-attachment: fixed;
         color: #221811;
         font-family: 'El Messiri', Arial, sans-serif;}
 
+#wrapper{background-color: #FEFAEB;
+        margin-left: auto;
+        margin-right: auto;
+        width: 80%;
+        min-width: 900px;
+        max-width: 1280px;
+        box-shadow: 5px 5px 5px #5a4131;}
+
 header  {background-color: #D2B48C;
         color: #8C3826;
-        text-align: center;}
+        text-align: center;
+        padding-top: 5px;
+        padding-bottom: 5px;}
 
-h1      {line-height: 200%;}
+h1      {font-size: 3em;}
 
 h2      {color: #8C3826;}
 
-nav     {text-align: center;
-        font-weight: bold;}
+h3,dt   {color: #8C3826;}
 
+h4      {background-color: #D2B48C;
+        font-size: 1.2em;
+        padding-left: .5em;
+        padding-bottom: .25em;}
+
+nav     {text-align: center;
+        font-weight: bold;
+        font-size: 1.5em;
+        padding-top: 5px;
+        padding-bottom: 5px;}
+
+nav a   {text-decoration: none;}
+
+main    {display: block;
+        padding-left: 2em;
+        padding-right: 2em;
+        padding-bottom: 2em;}
+
+.details {padding-left: 20%;
+        padding-right: 20%;}
+
+img     {border-style: none;
+        max-width: 100%;
+        height: auto;}
+
+#homehero{height: 300px;
+        background-image: url(images/hero.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;}
+        
 footer  {background-color: #D2B48C;
         font-size: .60em;
         text-align: center;
-        font-style: italic;}
+        font-style: italic;
+        padding: 1em;
+        border-top: 2px #8C3826;}
 
-#wrapper{width: 80%;
-        background-color: #FEFAEB;
-        margin-right: auto;
-        margin-left: auto;}
