--- a/javajam/javajam.css
+++ b/javajam/javajam.css
@@ -2,28 +2,22 @@
 
 *       {box-sizing: border-box;}
 
-body    {background-color: #FCEBB6;
-        background-image: url(images/fadedroad50.jpg);
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-attachment: fixed;
+/*Small Layout*/
+
+body    {background-color: #D2B48C;
 	color: #221811;
-        font-family: 'El Messiri', Arial, sans-serif;}
+        font-family: 'El Messiri', Arial, sans-serif;
+        margin: 0}
 
 #wrapper{background-color: #231814;
-	margin-left: auto;
-	margin-right: auto;
-	width: 80%;
-	min-width: 900px;
-	max-width: 1280px;
-	box-shadow: 3px 3px 3px #676767;
 	padding: 0;}
 
 header  {background-color: #D2B48C;
-	background-image: url(images/coffeelogo.jpg);
+	background-image: url(images/cup.jpg);
 	background-repeat: no-repeat;
 	color: #231814;
-	padding-left: 240px;
+        height: 128px;
+	padding-left: 105px;
 	padding-top: 5px;
 	padding-bottom: 5px;}
 
@@ -50,9 +44,7 @@ h4      {background-color: #D2B48C;
 	clear: left;}
      
 nav     {text-align: center;
-        font-size: 1.5em;
-        float: left;
-        width: 200px;}
+        font-size: 1.5em;}
 
 nav a   {text-decoration: none;}
 
@@ -63,46 +55,52 @@ nav a:visited {color: #D2B48C;}
 nav a:hover {color: #CC9933;}
 
 nav ul  {list-style-type: none;
-	padding-left: 0;}
+        display: flex;
+        flex-direction: column;
+	padding: 0;
+        margin: 0;
+        font-size: 1.25em;}
+
+nav li  {padding: .5em 1em .5em 1em;
+        width: 100%;
+        border-bottom: solid;}
 
 main    {background-color: #FEF6C2;
 	display: block;
-	margin-left: 200px;
-	padding: 0 0 2em 0;
-        overflow: auto;}
+	padding: 0 0 2em 0;}
+
+main ul {padding-left: 2em;
+        padding-right: 2em}
 
 main h2,h3,h4,p,div,ul,dl
-        {padding-left: 3em;
-        padding-right: 2em;}
+        {padding-left: 1em;
+        padding-right: 1em;}
 
 .details {padding-left: 20%;
         padding-right: 20%;}
-
-.floatleft {float: left;
-        padding-right: 2em;
-        padding-bottom: 2em;}
-
-.onethird {float: left;
-        width: 33%;}
 
 img     {border-style: none;
         max-width: 100%;
         height: auto;}
 
 #homehero {height: 300px;
-        background-image: url(images/hero.jpg);
+        background-image: url(images/road.jpg);
         background-size: 100% 100%;
         background-repeat: no-repeat;}
 
 #heromugs {height: 300px;
-        background-image: url(images/heromugs.jpg);
+        background-image: url(images/threemugs.jpg);
         background-size: 100% 100%;
         background-repeat: no-repeat;}
 
 #heroguitar {height: 300px;
-        background-image: url(images/heroguitar.jpg);
+        background-image: url(images/guitar.jpg);
         background-size: 100% 100%;
         background-repeat: no-repeat;}
+
+#mobile {display: inline;}
+
+#desktop{display: none;}
         
 footer  {background-color: #D2B48C;
         font-size: .60em;
@@ -110,3 +108,64 @@ footer  {background-color: #D2B48C;
         font-style: italic;
         padding: 1em;
         border-top: 2px #8C3826;}
+
+/*Medium Layout*/
+@media(min-width: 600px){
+
+        header  {text-align: center;
+                        padding-left: 0}
+
+        h1      {font-size: 3em;}
+
+        nav ul  {flex-flow: nowrap;
+                justify-content: space-around;}
+        
+        nav li  {border-bottom: none;}
+
+        #homehero  
+                {height: 50vh;
+                background-image: url(images/hero.jpg);}
+        
+        #heromugs   
+                {background-image: url(images/heromugs.jpg);}
+        
+        #heroguitar 
+                {background-image: url(images/heroguitar.jpg);}
+
+        #flow   {display: flow;
+                flex-direction: row;}
+        
+        #mobile {display: none;}
+        
+        #desktop{display: none;}
+
+        .details{display: flex;
+                flex-direction: row;}
+
+        h4      {margin-left: 10%;
+                margin-right: 10%;}
+}
+
+/*Large Layout*/
+@media(min-width: 1024px){
+ @supports (display: grid){
+        header  {grid-area: header;}
+
+        nav     {grid-area: nav;}
+
+        main    {grid-area: main;}
+
+        footer  {grid-area: footer;}
+
+        #wrapper {display: grid; 
+                grid-template:"header header"
+                        "nav main"
+                        "footer footer"
+                        /200px;}
+        
+        nav ul  {flex-direction: column;}
+
+        header  {background-image: url(images/coffeelogo.jpg);}
+
+        }
+}
