--- a/javajam/javajam.css
+++ b/javajam/javajam.css
@@ -109,6 +109,24 @@ footer  {background-color: #D2B48C;
         padding: 1em;
         border-top: 2px #8C3826;}
 
+table   {width: 90%; 
+        border-spacing: 0;}
+
+th, td  {padding: 10px}
+
+tr:nth-of-type(odd) {background-color: #D2B48E;}
+
+#herojobs {height: 300px;
+        background-image: url(images/coffeecup.jpg);
+        background-repeat: no-repeat;
+        background-size: 100% 100%;}
+
+form    {display: flex;
+        flex-direction: column;
+        padding-left: 1em; width: 80%;}
+
+input, textarea {margin-bottom: .5em;}
+
 /*Medium Layout*/
 @media(min-width: 600px){
 
@@ -144,6 +162,16 @@ footer  {background-color: #D2B48C;
 
         h4      {margin-left: 10%;
                 margin-right: 10%;}
+
+        form    {width: 40%;
+                display: grid;
+                grid-gap: 1em;
+                grid-template-columns: 6em 1fr;}
+
+        input   [type="submit"]{
+                grid-column: 2 / 3;
+                width: 9em;}
+        #herojobs {background-image: url(images/herojobs.jpg);}
 }
 
 /*Large Layout*/
