--- a/project/assets/css/style.css
+++ b/project/assets/css/style.css
@@ -341,6 +341,7 @@ h6 {
 /**
 * Mobile Navigation 
 */
+
 .mobile-nav-toggle {
   color: #222222;
   font-size: 28px;
@@ -354,7 +355,9 @@ h6 {
   color: #fff;
 }
 
+
 @media (max-width: 991px) {
+  
   .mobile-nav-toggle {
     display: block;
   }
@@ -476,12 +479,14 @@ h6 {
   line-height: 56px;
   color: #1B3F52;
   letter-spacing: 4px;
+  text-align: center;
 }
 
 #hero h2 {
   color: #f2f3ff;
   margin: 10px 0 0 0;
   font-size: 22px;
+  text-align: center;
 }
 
 #hero .btn-about {
